<resources>
    <string name="app_name">ក្តារចុចភាសាខ្មែរ</string>
    <string name="ime_name">ក្តារចុចភាសាខ្មែរ</string>
    <string name="app_about_description">\t\tយើងបានចាប់ផ្តើមស្រាវជ្រាវនិងអភិវឌ្ន៍កម្មវិធីរបស់យើងឡើងតាំងពីពាក់កណ្តាលឆ្នាំ ២០១៩ ។ ភាសាខ្មែរ (Khmerlang) ត្រូវបានបង្កើតឡើងដោយមានគោលដៅសាមញ្ញមួយគឺធ្វើឱ្យភាសាខ្មែរមានភាពងាយស្រួលប្រើប្រាស់ក្នុងជីវិតប្រចាំថ្ងៃរបស់យើង។ </string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">ក្តារចុចភាសាខ្មែរ</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">ក្តារចុចភាសាខ្មែរ</string>

    <string name="my_account">គណនី​របស់ខ្ញុំ</string>
    <string name="custom_mapping">វចនានុក្រមផ្ទាល់ខ្លួន</string>
    <string name="roman_mapping">វចនានុក្រមរ៉ូម៉ាំង</string>
    <string name="about">អំពី​ពួក​យើង</string>
    <string name="close">បិទកម្មវិធី</string>
    <string name="setting">ការកំណត់</string>
    <string name="title_activity_profile_settings">ការកំណត់</string>

    <!-- Sync Preferences -->
    <string name="vibrate_title">បើករំញ័រនៅពេលចុចគ្រាប់ចុច។</string>
    <string name="sound_effect_title">បើកសំឡេងនៅពេលចុចគ្រាប់ចុច។</string>
    <string name="dark_theme_title">បើកដំណើរគ្រោងការក្តារចុចពណ៍ខ្មៅ។</string>
    <string name="space_select_title">បើកជ្រើសរើសពាក្យស្វ័យប្រវត្តិ ពេលចុចដកឃ្លា។</string>

    <string name="app_logo_alt">Khmerlang</string>
    <string name="back_home">ត្រលប់ក្រោយ</string>
    <string name="title_activity_roman_mapping">វចនានុក្រមរ៉ូម៉ាំង</string>
    <string name="title_activity_custom_mapping">វចនានុក្រមផ្ទាល់ខ្លួន</string>
    <string name="dialogConfirmTitle">តើ​អ្នក​ប្រាកដ​ឬ​អត់?</string>
    <string name="dialogConfirmMessage">នៅពេលអ្នកកំណត់ឡើងវិញ, រាល់ទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នកទាំងអស់នឹងត្រូវលុបចេញ។</string>
    <string name="roman">Roman</string>
    <string name="edit_khmer">ខ្មែរ</string>
    <string name="edit_roman">Roman</string>
    <string name="submit">រក្សាទុក</string>
    <string name="cancel">បោះបង់</string>
    <string name="ok">យល់ព្រម</string>
    <string name="enable_keyboard_title">បើកដំណើរការក្តារចុច</string>
    <string name="enable_keyboard_description">សូមបើកក្តារចុច ភាសាខ្មែរ(Khmerlang Keyboard) នៅក្នុងការកំណត់ប្រព័ន្ធ។</string>
    <string name="app_name_kh">ខម្ែរ</string>
    <string name="app_welcome">ស្វាគមន៍​មកកាន់</string>
    <string name="to_khmerlang"> ភាសាខ្មែរ(Khmerlang)!</string>
    <string name="khmerlang_url">www.khmerlang.com</string>
    <string name="app_about">អំពី</string>
    <string name="app_about_find_us">អ្នកអាចរកឃើញយើងនៅ៖</string>
    <string name="search">ស្វែងរក...</string>
    <string name="add">បន្ថែម</string>
    <string name="reset_default">កំណត់លំនាំ</string>
    <string name="roman_item_khmer">ខ្មែរ</string>
    <string name="roman_item_roman">Roman</string>
    <string name="app_service_label">Khmerlang</string>
    <string name="item_empty">គ្មានពាក្យបង្កើត</string>
    <string name="item_created">ពាក្យត្រូវបានបង្កើតឡើង</string>
    <string name="error_must_khmer">ត្រូវតែជាអក្សរខ្មែរតែប៉ុណ្ណោះ។ គ្មានចន្លោះឬនិមិត្តសញ្ញាផ្សេងទៀតទេ។</string>
    <string name="error_must_roman">ត្រូវតែជាអក្សរអង់គ្លេសតែប៉ុណ្ណោះ។ គ្មានចន្លោះឬនិមិត្តសញ្ញាផ្សេងទៀតទេ។</string>
    <string name="error_must_not_empty">មិនអាចទទេ</string>
    <string name="reset_download">កំណត់ទិន្នន័យឡើងវិញ</string>
    <string name="upload_data">បញ្ជូនទិន្នន័យ</string>
    <string name="download_fail">មិនអាចទាញយកទិន្នន័យ</string>
    <string name="re_download_data">ទាញយកទិន្នន័យម្តងទៀត</string>
    <string name="dialogConfirmDownloadTitle">ទាញយកទិន្នន័យក្តារចុចឡើងវិញ</string>
    <string name="dialogConfirmDownloadMessage">តើអ្នកប្រាកដថាទាញយកទិន្នន័យក្តារចុចឡើងវិញទេ? ទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នកនឹងមិនលុបទេ</string>
    <string name="app_name_on_key"></string>
    <!--    //R2ខ្មែរ-->
    <string name="app_name_on_key_kh"></string>
    <string name="spell_suggestion_no_typo">រកមិនឃើញកំហុសទេ!!!</string>
    <string name="spell_suggestion_no_internet">មិនអាចភ្ជាប់ទៅម៉ាស៊ីនមេ!!!</string>
    <string name="spell_suggestion_text_too_short">អត្ថបទខ្លីពេក!!!</string>
    <string name="spell_suggestion_react_limit">សំណើច្រើនដល់ដែនកំណត់!!!</string>
    <string name="spell_suggestion_token_invalid">TOKEN មិន​ត្រឹមត្រូវ!!!</string>
    <string name="spell_suggestion_loading">កំពុងពិនិត្យ...</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <!--    ខ្មែរ-->
</resources>
