<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_layout"
    android:padding="16dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_khmer"
        android:hint="@string/edit_khmer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/danger"
        android:textSize="10sp"
        android:id="@+id/error_edit_khmer_msg"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_roman"
        android:hint="@string/edit_roman"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/danger"
        android:textSize="10sp"
        android:id="@+id/error_edit_roman_msg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_disable"
            android:theme="@style/HomeButton"
            android:text="@string/submit"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_default"
            android:theme="@style/ButtonDefault"
            android:text="@string/cancel"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
</LinearLayout>